fixed text overflow

--- a/frontEnd/app/styles/speakers.scss
+++ b/frontEnd/app/styles/speakers.scss
@@ -16,43 +16,29 @@
   margin: 0;
 }
 
-.speaker-img{
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-}
-
-.speaker-title{
-  font-family: proxima-nova-bold;
-  font-size: 20pt;
-  padding: 0;
-  margin: 0;
-}
-
-.speaker-info{
-  font-family: proxima-nova-regular;
-  font-size: 10pt;
-  padding: 0;
-  margin: 0;
-}
-
-
-.caption{
-  width: 100%;
-  color: #fff;
-  bottom: 0rem;
-  position: absolute;
-  background-color: #EC471F;
-  visibility: hidden;
-  opacity: 0.7;
-}
-
 .speaker{
-  margin: 0;
-}
-
-.speaker:hover .caption{
-  visibility: visible;
+  background: rgba(211,211,211,0.9);
+  padding:0vh 5vh 5vh 5vh;
+  &-image{
+    position:relative;
+    margin-bottom:4vh;
+    height:50vh;
+    //height:370px;
+    background-size:cover;
+  }
+  &-heading{
+    padding:1vh;
+    font-size:50pt;
+  }
+  &-image1{
+    background-image: url(../images/background.jpg);
+  }
+  &-image2{
+    background-image: url(../images/Gallery-1.jpg);
+  }
+  &-image3{
+    background-image: url(../images/Gallery-3.jpg);
+  }
 }
 
 .speaker-foot{
